# rust_crates

./: .gitignore  Cargo.toml  OWNERS  PRESUBMIT.cfg  README.md  cargo-audit.py  cleanup.py  licenses_used.txt  vendor.py  verify_licenses.py
crab/: README.md  crab-template.toml
crab/crates/: addr2line-0.14.1.toml  addr2line-0.17.0.toml  adler-0.2.3.toml  adler-1.0.2.toml  adler32-1.2.0.toml  ahash-0.7.6.toml  aho-corasick-0.7.18.toml  aligned-0.3.5.toml  alsa-sys-0.2.1.toml  ansi_term-0.11.0.toml  ansi_term-0.12.1.toml  anyhow-1.0.61.toml  anyhow-1.0.62.toml  arbitary-1.1.6.toml  arbitrary-1.1.6.toml  argh-0.1.8.toml  argh_derive-0.1.8.toml  argh_shared-0.1.8.toml  as-slice-0.1.5.toml  ascii-1.0.0.toml  assert_matches-1.5.0.toml  async-stream-0.3.3.toml  async-stream-impl-0.3.3.toml  async-task-4.3.0.toml  async-trait-0.1.48.toml  atomic-polyfill-0.1.10.toml  atomic-polyfill-0.1.11.toml  atty-0.2.14.toml  autocfg-0.1.7.toml  autocfg-1.0.1.toml  autocfg-1.1.0.toml  axum-0.5.16.toml  axum-core-0.2.8.toml  backtrace-0.3.56.toml  backtrace-0.3.66.toml  bare-metal-0.2.5.toml  bare-metal-1.0.0.toml  base64-0.10.1.toml  base64-0.13.0.toml  bayer-0.1.5.toml  (+622 more)
incremental-cargo-update/: Cargo.toml  README.md
incremental-cargo-update/src/: main.rs
patches/ahash-0.7.6/: ahash-0.7.6-rm-features.patch
patches/ascii/: make_files_non_executable.sh
patches/bayer/: remove-crate-type.sh
patches/bitvec/: 0001-add-license-txt.patch
patches/clap_conf/: add-license.patch
patches/colored/: remove-executable-permission-on-text-files.sh
patches/dbus-crossroads/: 0001-Fix-edge-case-with-object-manager-on.patch
patches/dbus-crossroads-0.4.0/: 0001-crossroads-Remove-requirement-of-having-properties-f.patch
patches/derive-into-owned/: 0001-add-license.patch
patches/filedescriptor/: 0001-add-license.patch
patches/ftdi/: add-license-file.patch
patches/funty/: 0001-add-license.patch
patches/grpcio-sys/: 0001-patch-yaml-load.patch
patches/grpcio-sys-0.9.1+1.38.0/: 001-grpc-vsock-support.patch
patches/hmac-sha256-0.1.7/: add-license.patch
patches/include_dir/: 0001-add-license.patch
patches/io-lifetimes/: disable-features.patch
patches/jsonschema/: add-license.patch
patches/libusb1-sys/: remove-libusb.sh
patches/number_prefix/: add-license.patch
patches/png/: png-0.16.8-update-to-miniz_oxide-0.4.1.patch
patches/protobuf-2.22.0/: update-protobuf-codegen-for-the-rust-uprev.patch
patches/protobuf-codegen/: update-protobuf-codegen-for-the-rust-uprev.patch
patches/radium/: 0001-add-license.patch
patches/rtt-target/: add-license.patch
patches/rustix/: disable-features.patch
patches/stderrlog-0.5.3/: 0001-Do-not-panic-in-the-log-statement-when-the-tty-close.patch
patches/structopt-0.3.26/: structopt-dont-use-lint.patch
patches/userfaultfd/: make_files_non_executable.sh
patches/void/: relicense-to-dual-mit-apache.patch
patches/wyz/: 0001-add-license-txt.patch
projects/: Cargo.toml  populate-workspace.py
projects/aosp/floss/: Cargo.toml
projects/empty_crates/: Cargo.toml
projects/pinned_crates/: Cargo.toml
projects/platform/crdyboot/: Cargo.toml
projects/platform/croscomp/: Cargo.toml
projects/platform/crosvm/: Cargo.toml
projects/platform/factory_installer/rust/: Cargo.toml
projects/platform/hps-firmware/: Cargo.toml
projects/platform/lego-controller/: Cargo.toml
projects/platform/minijail/rust/minijail/: Cargo.toml
projects/platform/minijail/rust/minijail-sys/: Cargo.toml
projects/platform/tast-tests/helpers/local/: Cargo.toml
projects/platform/uwbd/: Cargo.toml
projects/platform/uwbd/uwb_core_hal/: Cargo.toml
projects/platform/vboot_reference/rust/vboot_reference-sys/: Cargo.toml
projects/platform2/chromeos-dbus-bindings/: Cargo.toml
projects/platform2/cronista/: Cargo.toml
projects/platform2/crosh/: Cargo.toml
projects/platform2/hiberman/: Cargo.toml
projects/platform2/hwsec-utils/: Cargo.toml
projects/platform2/ippusb_bridge/: Cargo.toml
projects/platform2/libchromeos-rs/: Cargo.toml
projects/platform2/metrics/memd/: Cargo.toml
projects/platform2/os_install_service/: Cargo.toml
projects/platform2/resourced/: Cargo.toml
projects/platform2/sirenia/: Cargo.toml
projects/platform2/sirenia/libsirenia/: Cargo.toml
projects/platform2/sirenia/libsirenia/sirenia-rpc-macros/: Cargo.toml
projects/platform2/sirenia/manatee-client/: Cargo.toml
projects/platform2/sirenia/manatee-runtime/: Cargo.toml
projects/platform2/system_api/: Cargo.toml
projects/platform2/vm_tools/9s/: Cargo.toml
projects/platform2/vm_tools/chunnel/: Cargo.toml
projects/platform2/vm_tools/chunnel/system_api/: Cargo.toml
projects/platform2/vm_tools/crostini_client/: Cargo.toml
vendor_artifacts/: README.md  licenses_used.txt  verify_licenses.py
