
[package]
name = "vendor_libs"
version = "0.0.1"
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bindgen = "0.51"
bytes = "1.0"
cxx = { version = "1.0.42", features = ["c++17"] }
env_logger = "0.8"
futures = "=0.3.12"
grpcio = { version = "0.7", features = ["protobuf", "protobuf-codec", "openssl"] }
grpcio-sys = { version = "*", features = ["openssl"] }
lazy_static = "1.4"
log = "0.4"
nix = "0.19"
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0"
proc-macro2 = "1.0.24"
protobuf = "2.0"
protoc-grpcio = "2.0"
protoc-rust = "2.0"
quote = "1.0.8"
thiserror = "=1.0.23"
syn = { version = "1.0.58", features = ['default', 'full'] }
tokio = { version = "1.0", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }
tokio-stream = "0.1"
walkdir = "2.2"
