
[package]
name = "vendor_libs"
version = "0.0.1"
edition = "2018"
license = "BSD-Google"

[dependencies]
async-trait = "0.1.42"
bindgen = "0.59"
bytes = "1.0"
cxx = { version = "1.0.42", features = ["c++17"] }
dbus = "0.9.3"
dbus-crossroads = "0.4.0"
dbus-tokio = "0.7.3"
env_logger = "0.8"
futures = "0.3.13"
grpcio = { version = "0.9", features = ["protobuf", "protobuf-codec", "openssl"] }
grpcio-sys = { version = "0.9", features = ["openssl"] }
inotify = "0.9"
lazy_static = "1.4"
log = "0.4"
nix = "0.19"
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0"
proc-macro2 = "1.0.29"
protobuf = "2.0"
protoc-grpcio = "2.0"
protoc-rust = "2.0"
quote = "1.0.8"
regex = "1.5"
rustyline = "8.0"
rustyline-derive = "0.4.0"
thiserror = "1.0.23"
serde_json = "1.0"
syn = { version = "1.0.58", features = ['default', 'full'] }
syslog = "4.0"
tokio = { version = "1.0", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }
tokio-stream = "0.1"
walkdir = "2.2"
