[package]
name = "incremental-cargo-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "s"
panic = "abort"

[dependencies]
anyhow = "1.0.68"
cargo-lock = "8.0.3"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
simple_logger = "4.0.0"
tempdir = "0.3.7"
