# Packages that are represented in Portage's depgraph, but are ultimately
# empty/useless crates to ChromeOS.
#
# FIXME(b/240953811): remove this

[package]
name = "empty_crates"
version = "0.0.1"
edition = "2021"
license = "BSD-Google"

# Note that all dependencies are under a config we never compile for. This
# prompts `cargo vendor` to sync them, and `./vendor.py` to empty their contents
# out. That way, if these are ever used, we can detect that during compilation
# (empty crates turn into compile-time errors).
[target.'cfg(windows)'.dependencies]
# A lot of things depend directly on rustc-std-workspace-{core,std,alloc} as an
# optional dependency, and they're represented in many places in Portage's
# depgraph. Both upstream and in portage, these are empty crates around to make
# migration tooling happy.
rustc-std-workspace-alloc = "1"
rustc-std-workspace-core = "1"
rustc-std-workspace-std = "1"

# compiler_builtins is a similar story: it's a `CROS_RUST_EMPTY_CRATE`, but a
# lot of crates are marked as depending on it. We always link with compiler-rt,
# so ...
compiler_builtins = "0.1.2"

# All of these are explicitly marked as CROS_RUST_EMPTY_CRATE, and have no
# dependencies.
ahash = "0.7.0"
android_log-sys = "0.2.0"
arbitrary-04 = { package = "arbitrary", version = "0.4.0" }
arbitrary-10 = { package = "arbitrary", version = "1.0.0" }
average = "0.9.3"
bencher = "0.1.5"
bytemuck_derive = "1.0.0"
clippy = "0.0.166"
const-random = "0.1.12"
cpp_demangle = "0.3.0"
criterion = "0.3.3"
dav1d = "0.6.0"
dcv-color-primitives = "0.1.16"
digest = "0.9.0"
ed25519 = "1.2.0"
encoding = "0.2.33"
flame = "0.1.12"
flamer = "0.1.4"
fuchsia-zircon = "0.3.2"
gif = "0.11.1"
git2 = "0.13.0"
gumdrop = "0.8.0"
gzip-header = "0.3.0"
heapsize = "0.4.2"
hyphenation = "0.7.1"
jpeg-decoder = "0.1.22"
juniper = "0.15.0"
kernel32-sys = "0.2.2"
lexical-core = "0.6.0"
md5 = "0.7.0"
mio-extras = "2.0.5"
mp4parse = "0.11.5"
packed_simd_2 = "0.3.4"
paw = "1.0.0"
petgraph-05 = { package = "petgraph", version = "0.5.1" }
petgraph-06 = { package = "petgraph", version = "0.6.0" }
portable-atomic = "0.3.0"
postgres-types = "0.2.0"
print_bytes = "0.5.0"
prost = "0.7.0"
quickcheck-09 = { package = "quickcheck", version = "0.9.0" }
quickcheck-1 = { package = "quickcheck", version = "1.0.3" }
quickcheck_macros = "0.8.0"
rand = "0.3.20"
rand_xoshiro = "0.1.0"
ravif = "0.6.0"
redox_syscall = "0.1.51"
reqwest = "0.11.10"
rgb = "0.8.25"
riscv = "0.6.0"
rustc-test = "0.3.0"
scoped_threadpool = "0.1.0"
security-framework-sys = "0.3.3"
serde = "0.8.23"
serde_json = "0.8.6"
sha1 = "0.6.0"
skim = "0.9.0"
slog = "2.0.0"
smawk = "0.3.1"
stdweb = "0.4.20"
synstructure_test_traits = "0.1.0"
term_size = "0.3.0"
thread-id = "4.0.0"
tiff = "0.6.0"
tokio = "1.15.0"
tokio-io = "0.1.9"
unicode-linebreak = "0.1.2"
uniquote = "3.0.0"
url = "2.0.0"
wasi-1 = { package = "wasi", version = "0.10.0" }
wasi-09 = { package = "wasi", version = "0.9.0" }
wasmparser = "0.57.0"
windows = "0.10.0"
wmi = "0.9.0"
yaml-rust = "0.3.5"

# These are no longer available on crates.io, but still probably worth noting,
# as EMPTY_CRATE ebuilds for them exist in dev-rust/:
# crates-index = "0.5.1"  # all versions < 0.12.0 have been yanked
# dlib = "0.0.0"          # 0.0.0 never existed in crates.io
# value-bag = "1.0.0"     # 0.1.0 never exited on crates.io
# microamp = "0.1.0"      # 0.1.0 never existed in crates.io (except in alpha)
# sval = "1.0.0"          # 1.0.0 never existed on crates.io (except in alpha)

# These cannot be synced, since they're incompatible with (real)
# dependencies pulled in by others in `rust_crates/projects`.
# hyphenation-08 = { package = "hyphenation", version = "0.8.4" }
