# Non-empty packages that we need in our depgraph for strange reasons documented
# inline.

[package]
name = "pinned_crates"
version = "0.0.1"
edition = "2021"
license = "BSD-Google"

[dependencies]
# dev-rust/png has a local patch upgrading png from 0.3.5 to 0.4.1 with the
# no_extern_crate_alloc feature. Hold 0.4.1 here to respect this.
miniz_oxide = { version = "0.4.1", features = ["no_extern_crate_alloc"] }

# b/257987535: Newer versions seemingly break crosvm. Force this to the version
# from chromiumos-overlay for now.
chrono = "=0.4.19"
