[package]
name = "crdyboot"
version = "1.0.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
cty = "0.2"
log = "0.4"
printf-compat = { version = "0.1", default-features = false }
uefi = { version = "0.18", default-features = false, features = ["exts"] }
uefi-services = "0.15"
uguid = "1.0"

[dev-dependencies]
simple_logger = { version = "1.16", default-features = false }

[build-dependencies]
bindgen = "0.59"
