[package]
name = "crdyboot"
version = "1.0.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
cty = "0.2"
log = "0.4"
object = { version = "0.29.0", default-features = false, features = ["pe", "read_core", "unaligned"] }
printf-compat = { version = "0.1", default-features = false }
uefi = { version = "0.18", default-features = false, features = ["exts"] }
uefi-services = "0.15"
uguid = "1.0"

[dev-dependencies]
regex = "1.6.0"
simple_logger = { version = "1.16", default-features = false }

[build-dependencies]
bindgen = "0.59"
