[package]
name = "croscomp"
version = "0.1.0"
authors = ["Kristian H. Kristensen <hoegsberg@google.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
nix = "*"
log = "*"
env_logger = "*"
structopt = "0.3"
tokio = { version = "*", features = ["macros", "net", "signal", "rt"] }
tokio-macros = "*"
jobserver = "*"

[build-dependencies]
cc = "1.0.25"
pkg-config = "0.3"
rayon = "*"
