[package]
name = "crosvm"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.32"
argh = "0.1.7"
async-task = "4"
async-trait = "0.1.36"
bitflags = "1.0.1"
bitreader = "0.3.6"
bytes = "1.1"
cbindgen = "0.20"
cc = "1.0.25"
cfg-if = "1"
chrono-03 = { package = "chrono", version = "0.3" }
chrono-04 = { package = "chrono", version = "0.4" }
com_logger = "0.1"
crc32fast = "1.2"
crossbeam-utils = "0.8"
ctrlc = "3.2"
dbus = "0.9"
document-features = "0.2"
downcast-rs = "1.2"
enumn = "0.1"
env_logger = "0.9"
euclid = "0.22.7"
fnv = "1"
futures = "0.3"
futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
gdbstub = "0.6.1"
gdbstub_arch = "0.2.2"
intrusive-collections = "0.9"
io-uring = { version = "0.5", features = ["unstable"] }
libc = "0.2.93"
libfuzzer-sys = "0.4.4"
libslirp-sys = "4.2.1"
log = "0.4"
memoffset = "0.6"
merge = "0.1.0"
mio = { version = "0.7", features = ["os-ext"] }
nom = "7.1"
num = "0.2"
num-traits = "0.2"
once_cell = "1.7.2"
paste = "1"
pcap-file = "1.1"
pin-utils = "0.1.0-alpha.4"
pkg-config = "0.3.11"
proc-macro2 = "1"
protobuf = { version = "2.24", features = [ "with-serde" ] }
protoc-rust = "2.24"
quote = "1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
remain = "0.2"
scudo = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4"
smallvec = "1.6.1"
syn = { version = "1", features = ["extra-traits"] }
tempfile = "3"
terminal_size = "0.1.17"
thiserror = "1.0.20"
userfaultfd = "0.5.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
winapi = "0.3"
windows = "0.10"
wio = "0.2"
wmi = "0.9"
