[package]
name = "hps-firmware"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"


# hps-firmware relies on this Rust tool from one of its python scripts.
# Import the sources.
[build-dependencies]
svd2rust = "0.20.0"

[dependencies]
anyhow = "1.0.38"
bare-metal = "1.0.0"
bayer = "0.1.5"
bindgen = "0.59"
bitflags = "1.3.2"
clap = "3.1.0"
clap_derive = "3.1.0"
colored = "2.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "1.1.3"
crc = "2.0"
defmt = "0.2.1"
ed25519-compact = { version = "1", default-features = false, features = ["pem", "std"] }
embedded-hal = "0.2.6"
embedded-hal-mock = "0.8.0"
ftdi = "0.1.3"
gpio-cdev = "0.5.1"
hmac-sha256 = "0.1.6"
image = { version = "0.23.14", default-features = false, features = ["png"] }
indicatif = "0.16.2"
linux-embedded-hal = "0.3.1"
log = "0.4.14"
nb = "1.0.0"
num_enum = "0.5.1"
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
rusb = "0.8.1"
rustyline = "10.0.0"
simple_logger = { version = "1.13.0", default-features = false }
spi-memory = "0.2.0"
stm32g0 = "0.13.0"
stm32g0xx-hal = { version = "=0.1.5", features = ["rt", "stm32g071"] }
tempfile = "3.2.0"
vcell = "0.1.0"
