[package]
name = "lego-controller"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
indicatif = "0.16.2"
glob = "0.3.0"
once_cell = "1.9.0"
rusb = "0.8.1"
rustyline = "9.1"
rustyline-derive = "0.6.0"
shlex = "1.0"
tonic = "0.8.1"
tonic-build = "0.8.2"

[build-dependencies]
bindgen = "0.59"
