[package]
name = "lego-controller"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bindgen = "0.59"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9"
glob = "0.3"
include_dir = "0.6.1"
indicatif = "0.16.2"
jsonschema = { version = "0.15.1", features=[], default-features=false }
log = "0.4.14"
once_cell = "1.9"
rusb = "0.8.1"
rustyline = "9.1"
rustyline-derive = "0.6"
serde = "1.0.136"
serde_json = "1.0"
serde_yaml = "0.8"
shlex = "1.1"
tempfile = "3.2"
tonic = "0.8.1"
tonic-build = "0.8.2"
url = "2.2.2"
