[package]
name = "crosh"
version = "0.24.52"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
bitflags = "1.3.2"
chrono = "0.4"
dbus = "0.9"
getopts = "0.2"
lazy_static = "1.4.0"
libc = "0.2.44"
rand = "0.7"
remain = "*"
regex = "1.0.6"
rustyline = "9.1.1"
shell-words = "1.0.0"
textwrap = "0.11.0"

[dev-dependencies]
tempfile = "3.2.0"
