[package]
name = "hiberman"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
anyhow = "1.0.0"
dbus = "0.9"
dbus-crossroads = "0.5.0"
getopts = "0.2"
libc = "0.2.93"
log = { version = "0.4", features = ["std", "serde"] }
once_cell = "1.7"
openssl = "0.10.36"
protobuf = "2.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
syslog = "6.0.1"
thiserror = "1.0.20"
zeroize = { version = "1.5.1", features = ["zeroize_derive"] }
