[package]
name = "libchromeos"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[build-dependencies]
pkg-config = "0.3.11"

[dependencies]
dbus = "0.9"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
multi_log = "0.1.2"
serde = { version = "1.0.114", features = ["derive"] }
stderrlog = "0.5.0"
syslog = "6.0.1"
thiserror = "1.0.20"
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
