[package]
name = "sirenia"
version = "0.24.52"
description = "a TEE runtime environment."
authors = ["The Chromium OS Authors"]
edition = "2018"

[dev-dependencies]
assert_matches = "1.5.0"

[dependencies]
anyhow = "1.0.0"
dbus = "0.9"
dbus-crossroads = "0.5.0"
flexbuffers = "2.0.0"
getopts = "0.2"
libc = "0.2.97"
log = "0.4.0"
serde_bytes = "0.10.0"
serde_json = "1.0.64"
stderrlog = "0.5.0"
thiserror = "1.0.20"
