[package]
name = "factory_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.0"
bincode = "~1.0.1"
byteorder = "1.4.3"
clap = { version = "3.1.0", features = ["derive"] }
glob = "0.3.0"
hmac-sha256 = "0.1.7"
libc = "0.2.0"
nix = "0.23.0"
num-traits = "0.2.12"
num-derive = "0.3.3"
regex = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tempdir = "0.3.7"
tempfile = "3.2.0"
