[package]
name = "libsirenia"
version = "0.1.0"
description = "library for the TEE runtime environment"
authors = ["The Chromium OS Authors"]
edition = "2018"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
assert_matches = "1.5.0"

[dependencies]
anyhow = "1.0.0"
base64 = "0.13.0"
chrono = "0.4"
flexbuffers = "2.0.0"
getopts = "0.2"
libc = "0.2.44"
log = "0.4.0"
openssl = "0.10.40"
serde = { version = "1.0.114", features = ["derive"] }
serde_bytes = "0.10.0"
serde_json = "1.0.64"
thiserror = "1.0.20"
